force-app/main/default/objects/Student__c/fields/Auto_Number_field__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number_field__c</fullName>
    <label>Auto Number field</label>
    <type>AutoNumber</type>
</CustomField>