force-app/main/default/objects/Student__c/fields/Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Field__c</fullName>
    <label>Picklist Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>